2009-10-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/DomMethodNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs: Track
	  API changes.

2009-10-07  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/objects.xml: 

	* Makefile.am:
	* MonoDevelop.AssemblyBrowser.csproj:
	* MonoDevelop.AssemblyBrowser/NamespaceBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomEventNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomFieldNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/ReferenceNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomMethodNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs:
	* MonoDevelop.AssemblyBrowser/DomPropertyNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomReturnTypeNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/BaseTypeFolderNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/ReferenceFolderNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/ModuleDefinitionNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyBrowserTypeNodeBuilder.cs:
	  Worked on assembly browser.

2009-10-06  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.AssemblyBrowser.csproj:
	* MonoDevelop.AssemblyBrowser/NamespaceBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DocumentationPanel.cs:
	* MonoDevelop.AssemblyBrowser/DomFieldNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomEventNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomMethodNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs:
	* MonoDevelop.AssemblyBrowser/DomPropertyNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/ModuleDefinitionNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/IAssemblyBrowserNodeBuilder.cs:
	  Added documentation panel.

2009-10-06  Mike Krüger  <mkrueger@novell.com>
